FIXED random reload link to work behind static cache.
UPDATED padding on random card.
UPDATED to v0.2.2.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -216,7 +216,7 @@ p {
 .card-randomLink {
   border: none;
   display: inline-block;
-  padding: .25em;
+  padding: 0;
   line-height: 0;
   margin: 0;
 }
@@ -227,6 +227,7 @@ p {
 
 .card-randomLink > figure {
   border: none;
+  margin: .5em 2em;
 }
 
 .card-randomLink > figure > figcaption {
